Removed href from file (it was causing issues on smaller touch screens - file was opening instead of selecting the row)

--- a/_add-ons/s3files/css/s3files.css
+++ b/_add-ons/s3files/css/s3files.css
@@ -469,7 +469,6 @@
 }
 .s3files .s3-add-file .view-list .is-directory {
   background: url("../assets/build/img/icon-view-list-directory.png") 0.5em center no-repeat;
-  cursor: alias;
 }
 @media only screen and (-webkit-min-device-pixel-ratio: 1.3), only screen and (min--moz-device-pixel-ratio: 1.3), only screen and (-o-min-device-pixel-ratio: 1.3 / 1), only screen and (min-resolution: 125dpi), only screen and (min-resolution: 1.3dppx) {
   .s3files .s3-add-file .view-list .is-directory {
